# drift

./: .gitattributes  .gitignore  .merlin  Dockerfile  Dockerfile.base  LICENSE  Makefile  Overview.md  README.md  Vagrantfile  _tags  artifact.md  best_configs.csv  best_configs_drift.csv  best_configs_evdrift.csv  build.sh  diff.txt  drift_benchmark.pl  dune  dune-project  evDrift.opam  generate_table1  generate_table2  gitdiff.txt  gmon.out  out1  perf.txt  perf2.txt  res-polka_st-standard.csv  res-polka_st-thowid.csv  res.csv  res1-octpolka-thowid.csv  res1-polka_ls-thowid.csv  res_rtype.csv  run_experiments.py  runall_unsafe  smoke  smoke.py  smoke.sh  temp.csv  (+4 more)
comp_bin/: test_case_format.ml
result/: res-600.csv  res-d100.csv  res-n.csv  res-oct-dwid-300.csv  res-oct-standard.csv  res-oct-wid+nar.csv  res-polka-dwid-300.csv  res-polka-standard.csv  res-polka-wid+nar.csv  res-ppl_st-dwid-300.csv  res-ppl_st-standard.csv  res-ppl_st-wid+nar.csv  res-s.csv  res_dorder.csv  res_rtype.csv  table.out  table.py  table1.out  table2.out
result/1-sensitive/: res1-oct-dwid-300.csv  res1-oct-standard.csv  res1-oct-wid+nar.csv  res1-polka-dwid-300.csv  res1-polka-standard.csv  res1-polka-wid+nar.csv  res1-ppl_st-dwid-300.csv  res1-ppl_st-standard.csv  res1-ppl_st-wid+nar.csv
result/collapsed/: res-oct-dwid-300.csv  res-oct-standard.csv  res-oct-wid+nar.csv  res-polka-dwid-300.csv  res-polka-standard.csv  res-polka-wid+nar.csv  res-ppl_st-dwid-300.csv  res-ppl_st-standard.csv  res-ppl_st-wid+nar.csv
result/comp_tools/: res_dorder.csv  res_dsolve.csv  res_mochi.csv  res_rtype.csv
result/non-collapsed/: res-oct-dwid-300.csv  res-oct-standard.csv  res-oct-wid+nar.csv  res-polka-dwid-300.csv  res-polka-standard.csv  res-polka-wid+nar.csv  res-ppl_st-dwid-300.csv  res-ppl_st-standard.csv  res-ppl_st-wid+nar.csv
result/non-sensitive/: res-oct-dwid-300.csv  res-oct-standard.csv  res-oct-wid+nar.csv  res-polka-dwid-300.csv  res-polka-standard.csv  res-polka-wid+nar.csv  res-ppl_st-dwid-300.csv  res-ppl_st-standard.csv  res-ppl_st-wid+nar.csv
scripts/: 0-baseline.csv  1-baseline.csv  benchs_popl21.sh  compare_results.py  dsolve_runit.sh  dsolve_table.py  mochi_runit.sh  mochi_table.py  r_type_runit.sh  r_type_table.py  res-dsolve.csv  runit.sh  smoke_runit.sh  table.py
scripts/benchexec-drifttoolinfo/: Makefile  setup.py
scripts/draft/: Makefile  README.md  benchmark-coarmochi.xml  benchmark-drift.xml  latest-results.html
scripts/effects/: ExpUtils.pm  Makefile  README.md  benchexec.cfg  benchmark-coarmochi.xml  benchmark-drift-autogenerated.xml  benchmark-drift-tos.xml  benchmark-drift.xml  benchmark-driftwrapper.xml  benchmark-evdrift-autogenerated.xml  benchmark-mochi.xml  benchmark-rethfl.xml  coarmochi.py  cps_translate.py  csvToTex.pl  csvs.txt  latest-results.csv  latest-results.diff.html  latest-results.html  latest-results.table.html  latest-results.table.tex  makeBestConfigs.pl  makeLatex.pl  makePreciseResults.pl  makeRunDefinitions.pl  makeTracePart.pl  makeYamls.pl  ml_rethfl_translate.pl  ml_tuple_translate.py  results.tex  runNewMochi.sh  table-generator.xml  table.tex
src/: abstractDomain.ml  abstractTransformer.ml  syntax.ml  tests.ml  util.ml
src/algo/: abstractEv.ml  abstractTransformer.ml
src/domain/: abstractDomain.ml  accAutomaton.ml  katDomain.ml  semanticDomain.ml  sensitiveDomain.ml  tracePartDomain.ml
src/effects/: CPSConversion.ml  cpsConversion.ml  dune  effectAutomataGrammar.mly  effectAutomataLexer.mll  effectAutomataSyntax.ml  ev_cfa.ml  translation.ml  tupleOCamlSltStoreTranslation.ml  (+1 more)
src/frontends/: dune  (+8 more)
tests/: apply_twice.ml  list.ml  relation.ml  test1  untyped.ml
(+1316 files in other folders)
